--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="zwYIG37bjOCe5eZxm4EtNL49cUJAO0sCvLjcgBmAKj8" />
     <title>Document</title>
     <link href="../static/css/reset.css" th:href="@{/reset.css}" rel="stylesheet" />
     <link href="../static/css/fonts.css" th:href="@{/fonts.css}" rel="stylesheet" />
